--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ tokio = { version = "1", features = ["full"] }
 dotenv = { version = "0.15.0" }
 env_logger = { version = "0.10.0" }
 log = { version = "0.4.20" }
+futures = "0.3"
